--- a/syntax.tex
+++ b/syntax.tex
@@ -28,10 +28,17 @@ $$
 where $\feature{A} \in \calF$ and $p\in(0,1)$. The set of terms of the
 algebra will be denoted by  $\fodaPAp$.
 \edfn
-\mncomment{Por que no se cuantifica el $P \paral Q$? El  resultado es que hay que poner un cutre $\frac12$ en la semantica operacional que, ademas, se justifica regular. Charlote anyadido, incluyendo cita a D'Argenio que esta en el PC.}
+\mncomment{Por que no se cuantifica el $P \paral Q$? El  resultado es
+  que hay que poner un cutre $\frac12$ en la semantica operacional
+  que, ademas, se justifica regular. Charlote anyadido, incluyendo
+  cita a D'Argenio que esta en el PC.}
+\lcomen{No lo cuantifico porque no se darle un significado
+  ``intuitivo'' a esa probabilidad}
 
 \mncomment{Creo que $P \paral \nil$ no es equivalente a $P$. De hecho, $P \paral \nil$ es equivalente a $\nil$, no? Esto es lo que quereis que sea? Hay un problema similar con $P \choice_{p} \nil$.}
-
+\lcomen{Es cierto que $P\paral\ni$ es equivalente a $\nil$. $P\choice
+  \nil$ es equivalente a $P$. Algo parecido con probabilidades, pero
+  hay en este caso hay un $\waste$.}
 %\todo{Hay que explicar los operadores probabilísticos $P \choice_{p}
 %       Q$ y $\ofeature{A};_{p} P$ y la razón por la que el resto no
 %       necesita probabilidades.}
