--- a/hiding.tex
+++ b/hiding.tex
@@ -37,7 +37,8 @@ denote as $\bot\not\in\calF$, we consider the set $\calFbot =
 
 
 So we extend the set of operators with a new one: hiding a set of
-features in a term.
+features in a term. 
+
 \bdfn
   Let $\calA\subseteq \calF$ be a subset of features and
   $P\in\fodaPAp$ be a term,
@@ -47,13 +48,17 @@ features in a term.
 \edfn
 
 Next we need to give the semantics of the new operator. First, the
-operational semantics is given by the rules appearing in Figure~\ref{fig:oper-hid}.
+operational semantics is given by the rules appearing in
+Figure~\ref{fig:oper-hid}. 
 
+In order to define the denotational semantics of the new operator,
+first we need an auxiliary function that hides all some features
+from a given product.
 
 \bdfn
-  Dado el producto $pr\subseteq\calF$ y el conjunto de características ocultas $\calA\subseteq\calF$
-  se define:
-  
+  Let $pr\subseteq\calF$ be a product and $\calA\subseteq\calF$
+  be a set of features. The \emph{hidden operation of the set $\calA$
+    in $pr$}, denoted by $pr\hide{\calA}$, is defined as follows:
   \begin{displaymath}
     pr\hide{\calA} = \{\fA\ |\ \fA\in pr,\
     \fA\not\in\calA\}\cup
@@ -62,21 +67,41 @@ operational semantics is given by the rules appearing in Figure~\ref{fig:oper-hi
       \emptyset & \mbox{si } pr\cap\calA=\emptyset\\
     \end{cases}
   \end{displaymath}
-  Dada la traza $s\in\calF^{*}$, $s\hide\calA$ representará la substitución
-  de cada ocurrencia en la traza $s$ de cualquier característica en $\calA$ por $\bot$.
+  Analogously, for any trace $s\in\calF^{*}$, $s\hide\calA$ is the
+  resulting
+  trace of 
+  substituting of any  occurrence of a feature $\fA\in\calA$ by
+  the symbol $\bot$ in $s$. 
 \edfn
 
 \bdfn
-  Dado el multiconjunto $M\in\calM$ y el conjunto de características ocultas $\calA\subseteq\calF$. Se define:
+  Let $M\in\calM$ and $\calA\subseteq\calF$. We define:
   \begin{displaymath}
     \semdenp{\cdot\hide{\calA}} = \accum\Bigl(\lbag(pr\hide{\calA},p)\
     |\ (pr,p)\in M\rbag \Bigr)
   \end{displaymath}
 \edfn
 
+As in the case of the other operators, we have to prove that the
+operational semantics and the denotational semantics coincide. This is
+proven by the next Proposition.
+\bprop\label{prop:hid}
+  \begin{displaymath}
+    \prodp(P\hideA)  = \semdenp{\prodp(P)\hideA}
+  \end{displaymath}
+  \begin{proof}
+    The proof is in the Appendix, page~\pageref{prof:prop:hid}.
+  \end{proof}
+\eprop
+
+
+Finally, the next proposition allows to \emph{remove} the hiding
+operator from any term. The idea is to substitute any occurrence of
+the hidden actions by the symbol $\bot$. Let us note that we cannot
+hide actions that appear in the restriction operators.  
 \bprop
-  Dados los términos $P,Q\in\fodaPAp$ y el conjunto de acciones ocultas $\calA\subseteq\calF$, entonces
-  las siguientes proposiciones mantienen
+  Let $P,Q\in\fodaPAp$ be terms, $r\in (0,1]$ be a probability, and 
+  $\calA\subseteq\calF$ be a set of hidden actions, then
   \begin{itemize}
   \item $\semdenp{\checkmark\hide\calA}=\semdenp{\checkmark}$
   \item $\semdenp{\nil\hide\calA}=\semdenp{\nil}$
@@ -99,77 +124,13 @@ operational semantics is given by the rules appearing in Figure~\ref{fig:oper-hi
   \item If $\fA,\fB\not\in\calA$ entonces 
     $\semdenp{(\exclude{B}{P})\hide\calA}=\semdenp{\exclude{A}{B}{(P\hide\calA)}}$
   \end{itemize}
-  \bprf
-    TO DO \lcomen{Espero que esto salga aplicando las definiciones. No
-      creo que sea dificil, pero sí un conazo}
-  \eprf
+  \begin{proof}
+    In order to prove this properties it is enough to apply
+    Proposition~\ref{prop:hid}.
+  \end{proof}
 \eprop
 
-\bprop
-  $P\hide\calA\vtran{s}_r$ si y sólo si $r=\sum\lbag p \ |\ P\vtran{s'}_p Q,\
-  s=s'\hide\calA\rbag$
-  \textit{Demostración.}
-    La demostración es realizada por inducción sobre la longitud
-    de la traza $s$. Si la longitud es cero el resultado es trivial. Entonces
-    se supone que
-    $s=\fA\cdot s_1$. Si $\fA=bot$ entonces cualquier transición
-    $P\hideA\tran{s}{p}Q\hideA$ puede ser dividida en transiciones,
-    posiblemente mas de una, como por ejemplo.
-    \begin{displaymath}
-      P\hideA\tran{\bot}_{r_1}P_1\hideA\vtran{s_1}_{r2}Q
-    \end{displaymath}
-    Entonces se tiene
-    \begin{displaymath}
-      \begin{split}
-        r = \sum\lbag p\ |\ P\hideA\vtran{s}_p Q\rbag = 
-        \sum\lbag r_1\cdot r2\ |\
-        P\hideA\tran{\bot}_{r_1}P_1\hideA\vtran{s_1}_{r2}Q\rbag =\\
-        \sum\lbag r_1'\cdot r2\ |\
-        P\hideA\tran{\fB}_{r_1'}P_1'\hideA\vtran{s_1}_{r2}Q,\ \fB\in\calA\rbag
-      \end{split}
-    \end{displaymath}
-    Ahora por cada una de las $r_1'$, se puede aplicar el método inductivo a cada una de las
-    transiciones $P_1'\hideA\vtran{s_1}_{r2}Q$ para obtener 
-    $r_2=\sum\lbag r2'\ |\ P_1=\vtran{s_1'}Q,\
-    s_1=s_1'\hideA\rbag$. Continuando la ecuación anterior :
-    \begin{displaymath}
-      \begin{split}
-        \sum\lbag r_1'\cdot r2\ |\
-        P\hideA\tran{\fB}_{r_1'}P_1'\hideA\vtran{s_1}_{r2}Q,\
-        \fB\in\calA\rbag=\\
-        \sum\lbag r_1'\cdot r2'\ |\ P\hideA\tran{\fB}_{r_1'}P_1'\vtran{s_1'}_{r2'}Q,\
-        \fB\in\calA.\ s_1=s_1'\hideA\rbag = \\
-        \sum\lbag r_1\cdot r2'\ |\ P\hideA\tran{\bot}_{r_1}P_1\vtran{s_1'}_{r2'}Q,\
-        \fB\in\calA.\ s_1=s_1'\hideA\rbag =\\
-        \sum\lbag r\ |\ P\vtran{s'}_{r}Q,\ s=s'\hideA\rbag
-      \end{split}
-    \end{displaymath}
-    El caso cuando $\fA\not\in\calA$ es similar al anterior, solo necesita saltar el paso de $\fB$ a $\bot$.
-  
-\eprop
 
-\bprop
-  \begin{displaymath}
-    \prodp(P\hideA)  = \semdenp{\prodp(P)\hideA}
-  \end{displaymath}
-  \textit{Demostración.}
-    $(pr,p)\in \prodp(P\hideA)$ si y sólo si 
-    \begin{displaymath}
-      \begin{split}
-        p = \sum\lbag r\ |\
-          P\hideA\tran{s\checkmark}_rP'\hideA.\ pr=\product{s}\rbag =\\
-        \sum\lbag r\ |\ P\tran{s'\checkmark}_rP',\ s=s'\hideA,\
-          pr=\product{s}\rbag=\\
-        \sum\lbag r\ |\ P\tran{s'\checkmark}_rP',\ s=pr\hideA\rbag =
-        \\
-        \sum\lbag r\ |\ (pr',r)\in\prodp(P),\ pr'=pr\hideA\rbag =
-      \end{split}
-    \end{displaymath}
-    De tal manera 
-    $(pr,p)\in\prodp(P\hideA)$ si y sólo si 
-    $(pr,p)\in\semdenp{(\prodp(P))\hideA}$ 
-
-\eprop
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "main"
